# shelltoy

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NOTES  README  README.md  default.nix
cmake/: Findlibtsm.cmake
doc/man/man1/: ttoy.1  ttoyctl.1
doc/man/man3/: libttoy.3
include/shelltoy/: backgroundToy.h  configure_version_header.cmake.in  error.h  errorCodes.h  fileWatcher.h  plugin.h  textToy.h  version.h.in
include/ttoy/: backgroundToy.h  configure_version_header.cmake.in  error.h  errorCodes.h  fileWatcher.h  plugin.h  textToy.h  version.h.in
src/: CMakeLists.txt  backgroundRenderer.c  backgroundRenderer.h  backgroundToy.c  backgroundToyDictionary.c  backgroundToyDictionary.h  boundingBox.c  boundingBox.h  collisionDetection.c  collisionDetection.h  color.h  config.c  config.h  dynamic_list.txt  error.c  error.h  fileWatcher.c  font.c  font.h  fontRef.c  fontRef.h  fontRefArray.c  fontRefArray.h  fonts.c  fonts.h  glyphAtlas.c  glyphAtlas.h  glyphRenderer.c  glyphRenderer.h  glyphRendererRef.c  glyphRendererRef.h  logging.c  logging.h  main.c  naiveCollisionDetection.c  naiveCollisionDetection.h  plugin.c  plugin.h  pluginDictionary.c  pluginDictionary.h  (+19 more)
src/common/: CMakeLists.txt  array.c  array.h  dictionary.c  dictionary.h  glError.c  glError.h  mkdir.c  mkdir.h  reference.h  shader.c  shader.h  shaders.c  shaders.h  version.h
src/common/assets/shaders/: background.frag  background.vert  glyph.frag  glyph.vert  underline.frag  underline.vert
src/plugins/: CMakeLists.txt
src/plugins/glsltoy/: CMakeLists.txt  backgroundToy.c  backgroundToy.h  glsltoy.c  glsltoy.h  plugin.c  plugin.h  textToy.c  textToy.h  toy.c  toy.h
src/toys/: CMakeLists.txt
src/toys/glsltoy/: CMakeLists.txt  glsltoy.c  glsltoy.h
src/ttoyctl/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  check_boundingBox.c  check_config.c  test_config.json  test_terminal.c  test_ttoy.c  test_ttoy_BoundingBox.c  test_ttoy_BoundingBox.h  test_ttoy_Config.c  test_ttoy_Config.h  test_ttoy_Terminal.c  test_ttoy_Terminal.h
